# hobbies

./: .clang-format  .clang-tidy  .env  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.bak  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  clang-format.yaml  gradient.exr  hobbies.code-workspace  layout.ini  profile_run.sh  raytrace.sh  separate_builds.sh  testing.sh  wsl_conanfile.txt
basal/: CMakeLists.txt  conanfile.py
basal/cmake/: Findbasal.cmake  basalConfig.cmake
basal/include/basal/: basal.hpp  debuggable.hpp  exception.hpp  ieee754.hpp  listable.hpp  module.hpp  options.hpp  printable.hpp
basal/source/: basal.cpp  debuggable.cpp  exception.cpp  listable.cpp  module.cpp  options.cpp
basal/test/: gtest_basal.cpp
fourcc/: CMakeLists.txt  conanfile.py
fourcc/cmake/: Findfourcc.cmake  fourcc-config.cmake  fourccConfig.cmake
fourcc/include/fourcc/: image.hpp  targa.hpp
fourcc/source/: convolve.cpp  image.cpp
fourcc/test/: gtest_fourcc.cpp
geometry/: CMakeLists.txt  conanfile.py
geometry/cmake/: Findgeometry.cmake
geometry/include/geometry/: extra_math.hpp  geometry.hpp  gtest_helper.hpp  intersection.hpp  line.hpp  plane.hpp  point.hpp  ray.hpp  sphere.hpp  types.hpp  vector.hpp
geometry/source/: extra_math.cpp  intersection.cpp  line.cpp  plane.cpp  point.cpp  ray.cpp  sphere.cpp  vector.cpp
geometry/test/: gtest_extra.cpp  gtest_intersections.cpp  gtest_line.cpp  gtest_plane.cpp  gtest_point.cpp  gtest_ray.cpp  gtest_sphere.cpp  gtest_vector.cpp
htm/: CMakeLists.txt  conanfile.py
htm/cmake/: Findhtm.cmake
htm/demo/: sparse_word.cpp
htm/include/htm/: dense_word.hpp  encoders.hpp  htm.hpp  sparse_word.hpp
htm/source/: encoders.cpp  frand.cpp
linalg/: CMakeLists.txt  conanfile.py
linalg-algo/: CMakeLists.txt  conanfile.py
linalg-algo/cmake/: Findlinalg-algo.cmake  linalg-algo-config.cmake
linalg-algo/demo/: demo_kmeans.cpp
linalg-algo/include/linalg/: dkf.hpp  kmeans.hpp
linalg-algo/source/: dkf.cpp  kmeans.cpp
linalg-utils/: CMakeLists.txt  README.md  conanfile.py
linalg-utils/cmake/: Findlinalg-utils.cmake  linalg-utils-config.cmake
linalg-utils/demo/: demo_images.cpp  demo_least_squares.cpp
linalg-utils/include/linalg/: opencv.hpp  plot.hpp  trackbar.hpp  utils.hpp
linalg-utils/source/: opencv.cpp  plot.cpp
linalg/cmake/: Findlinalg.cmake  linalg-config.cmake
linalg/include/linalg/: gtest_helper.hpp  linalg.hpp  matrix.hpp  solvers.hpp  types.hpp
linalg/source/: matrix.cpp  solvers.cpp
linalg/test/: gtest_matrix.cpp  gtest_solvers.cpp
neuralnet/: CMakeLists.txt  conanfile.py
neuralnet/cmake/: Findneuralnet.cmake  neuralnet-config.cmake
neuralnet/demo/: neuralnet_counter.cpp
neuralnet/include/neuralnet/: hidden.hpp  inner.hpp  input.hpp  layer.hpp  matrix.hpp  mnist.hpp  network.hpp  neuralnet.hpp  output.hpp
neuralnet/source/: hidden.cpp  inner.cpp  input.cpp  layer.cpp  matrix.cpp  mnist.cpp  network.cpp  neuralnet.cpp  output.cpp
noise/: CMakeLists.txt  conanfile.py
noise/cmake/: Findnoise.cmake
noise/demo/: fbm_tuner.cpp  main_turbulent_tuner.cpp  perlin_tuner.cpp
noise/include/noise/: noise.hpp  types.hpp
noise/source/: noise.cpp
noise/test/: gtest_noise.cpp
projects/audio/: CMakeLists.txt
projects/audio/source/: audio.cpp
projects/audio/test/: gtest_audio.cpp
projects/basal/: CMakeLists.txt  conanfile.py
projects/basal/.vsconan/: config.json
projects/basal/cmake/: basal-config.cmake
projects/basal/source/: basal.cpp  debuggable.cpp  exception.cpp  module.cpp  options.cpp
projects/basal/test/: gtest_basal.cpp  gtest_fraction.cpp  gtest_listable.cpp  gtest_worker.cpp
projects/doorgame/: CMakeLists.txt  conanfile.py
projects/doorgame/cmake/: Finddoorgame.cmake  doorgame-config.cmake
projects/doorgame/source/: actions.cpp  animate.cpp  directions.cpp  game.cpp  map.cpp  monster.cpp  player.cpp  room.cpp  storage.cpp  streamview.cpp
projects/ecs/: CMakeLists.txt
projects/ecs/demo/: main.cpp
projects/fourcc/: CMakeLists.txt  conanfile.py
projects/fourcc/cmake/: Findfourcc.cmake  fourcc-config.cmake
projects/fourcc/source/: convert.cpp  convolve.cpp  encoding.cpp  image.cpp  pairs.cpp  pixel.cpp
projects/fourcc/test/: gtest_fourcc.cpp  (+1 more)
projects/fractals/: CMakeLists.txt  README.md
projects/geometry/: CMakeLists.txt  README.md  conanfile.py
projects/htm/: CMakeLists.txt  conanfile.py
projects/isa/: CMakeLists.txt  README.md
projects/linalg/: CMakeLists.txt  README.md  conanfile.py
projects/linalg-algo/: CMakeLists.txt  conanfile.py
projects/linalg-utils/: CMakeLists.txt  README.md  conanfile.py
projects/neuralnet/: CMakeLists.txt  conanfile.py
projects/noise/: CMakeLists.txt  README.md  conanfile.py
projects/pyhobbies/: CMakeLists.txt  conanfile.py  setup.py
projects/raytrace/: CMakeLists.txt  NOTES.md  README.md  conanfile.py
pyhobbies/: CMakeLists.txt  conanfile.py  pyproject.toml  setup.py
pyhobbies/source/: module.cpp
pyhobbies/tests/: test.py
raytrace/: CMakeLists.txt  README.md  conanfile.py
raytrace/cmake/: Findraytrace.cmake  raytrace-config.cmake
raytrace/demo/: group.hpp  main_console.cpp  main_opencv.cpp  main_random_tuner.cpp  main_sphere_surfaces.cpp  trackbar.hpp  world.hpp  world_art1.cpp  world_cornell.cpp  world_desktoy.cpp  world_example.cpp  world_example2.cpp  world_glass.cpp  world_lenses.cpp  world_monochrome.cpp  world_outrun.cpp  world_planet.cpp  world_snowman.cpp  world_spheres.cpp  world_spheres2.cpp  world_steel.cpp  world_steel_objects.cpp
raytrace/source/: camera.cpp  color.cpp  image.cpp  mapping.cpp  scene.cpp
raytrace/test/: gtest_camera.cpp  gtest_color.cpp  gtest_cone.cpp  gtest_cuboid.cpp  gtest_cylinder.cpp  gtest_entity.cpp  gtest_image.cpp  gtest_laws.cpp  gtest_light.cpp  gtest_mapping.cpp  gtest_perf.cpp  gtest_plane.cpp  gtest_renders.cpp  gtest_ring.cpp  gtest_scene.cpp  gtest_sphere.cpp  gtest_surface.cpp  gtest_torus.cpp  gtest_triangle.cpp
xmmt/: CMakeLists.txt  conanfile.py
xmmt/cmake/: Findxmmt.cmake
xmmt/test/: gtest_xmmt.cpp
(+642 files in other folders)
